# linux-audio-example

./: CMakeLists.txt  COPYING  README.md  libsndfile_port.c  libsndfile_pulse.c
libao/: CMakeLists.txt  libsndfile_libao_blockplay.c
portaudio/: CMakeLists.txt  libsndfile_port_blockplay.c  libsndfile_port_blockrec.c  libsndfile_port_play.c  libsndfile_port_read.c  libsndfile_port_rec.c  libsndfile_port_write.c
pulseaudio/: CMakeLists.txt  libsndfile_pulse_blockplay.c  libsndfile_pulse_play.c
pulseuadio/: libsndfile_pulse_blockrec.c  libsndfile_pulse_read.c  libsndfile_pulse_rec.c  libsndfile_pulse_write.c
sdl/: CMakeLists.txt  libsndfile_sdl_play.c  libsndfile_sdl_read.c
